Se arregla responsive celulares

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="row h-100">
         <div class="col">
         </div>
-        <div class="middle col-xs-8 col-md-5 align-self-center text-center">
+        <div class="middle col-9 col-sm-12 col-md-9 col-lg-7 align-self-center text-center">
             <form class="form-signin" action="#" method="post">
                 <!-- Se incluye logo via css -->
                 <div class="mb-4 logo"></div>
